// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`python export > matches full stubs snapshot 1`] = `
"import chipwhisperer as cw

# Full stub export from Glitch Visualizer
scope = cw.scope()
target = cw.target(scope)

# Generated by Glitch Visualizer (simulation-first)
# glitch_source_hz=10000000 (clk_src=target)
# cycle_ns=100, step_ns=0.022321, deg_per_step=0.080357
scope.glitch.enabled = True
scope.glitch.clk_src = 'target'
scope.clock.fpga_vco_freq = 800000000
scope.glitch.output = 'clock_xor'
scope.glitch.trigger_src = 'ext_single'
scope.glitch.arm_timing = 'after_scope'
scope.glitch.offset = 0
scope.glitch.width = 448
scope.glitch.num_glitches = 1
scope.glitch.repeat = [2]
scope.glitch.ext_offset = [1]
scope.io.glitch_hp = False
scope.io.glitch_lp = False

assert scope.glitch.mmcm_locked
print('Configured glitch module successfully.')
print('actual_num_glitches=', getattr(scope.glitch, 'actual_num_glitches', 'n/a'))"
`;

exports[`python export > matches params-only snapshot 1`] = `
"# Generated by Glitch Visualizer (simulation-first)
# glitch_source_hz=10000000 (clk_src=target)
# cycle_ns=100, step_ns=0.022321, deg_per_step=0.080357
scope.glitch.enabled = True
scope.glitch.clk_src = 'target'
scope.clock.fpga_vco_freq = 800000000
scope.glitch.output = 'clock_xor'
scope.glitch.trigger_src = 'ext_single'
scope.glitch.arm_timing = 'after_scope'
scope.glitch.offset = 0
scope.glitch.width = 448
scope.glitch.num_glitches = 1
scope.glitch.repeat = [2]
scope.glitch.ext_offset = [1]
scope.io.glitch_hp = False
scope.io.glitch_lp = False"
`;
